# KnottedGraph

./: .gitignore  Multiband.ipynb  README.md  Repulsion_protein.ipynb  Results.ipynb  analytic_work.ipynb  example.ipynb  getting_started.ipynb  math_dataset.ipynb  pyproject.toml  structured_graph_yamada_dataset.csv
.mpl-cache/: fontlist-v390.json
.mpl-cache-test/: fontlist-v390.json
BerryCurvature_Results/: BerryClean.ipynb
Figure_Generation/: Figures.ipynb
agent/: pdplot.md
assets/: ES_SG_gamma=0.2.html  ES_SG_gamma=0.5.html  ES_gamma=0.1.html  ES_gamma=0.1_silhouettes.html  SG_gamma=0.1_silhouettes.html  threelink_gamma=0.1.html
public/: tube_and_graph_vs_thickness.html
public/frames/contours/: frame_00.html  frame_01.html  frame_02.html
result/: BerryClean.ipynb  Figures_H.ipynb  Results.ipynb  figures_xq.ipynb
result/ES_and_SG/: threelink_gamma=0.1.html
scripts/: bootstrap_repulsion.py
src/knotted_graph/: NodalKnot.py  NodalSkeleton.py  NodalSkeletonMultiBand.py  __init__.py  examples.py  pd_codes.py  skeleton2graph.py  surface_modes.py  util.py  vis.py  yamada.py
src/knotted_graph/yamada/: Graphs_collection.py  __init__.py  geom.py  pd_code.py  planar_diagram.py  polynomial.py  recursive.py  util.py
src/nodal_knot/: NodalKnot.py  __init__.py  pd_codes.py  surface_modes.py  util.py  utils.py  vis.py  yamada.py
