[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knotted_graph"
dynamic = ["version", "description"]
authors = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"},
    {name = "Hakan Akgün", email = "hakanakgun317@gmail.com"},
]
maintainers  = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"},
    {name = "Hakan Akgün", email = "hakanakgun317@gmail.com"},
]
keywords = [
    "non-Hermitian topology",
    "knotted graph",
    "exceptional surface",
    "3D spatial multigraph",
    "morphological image processing"
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "poly2graph",
    "igraph",
    "shapely",
    "minorminer",
    "tabulate",
    "jupyterlab",
    "pyvista[all]",
]

[project.optional-dependencies]
dev = [
    "plotly",
]

[project.urls]
Homepage = "https://github.com/sarinstein-yan/Nodal-Knot"
Repository = "https://github.com/sarinstein-yan/Nodal-Knot"

[tool.hatch.version]
path = "src/knotted_graph/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "assets",
  "*.ipynb",
  "**/*.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = ["src/knotted_graph"]