[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knotted_graph"
dynamic = ["version", "description"]
authors = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"},
    {name = "Hakan Akgün", email = "hakanakgun317@gmail.com"},
]
maintainers  = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"},
    {name = "Hakan Akgün", email = "hakanakgun317@gmail.com"},
]
keywords = [
    "non-Hermitian topology",
    "nodal structure",
    "exceptional surface",
    "knotted graph",
    "spatial multigraph",
    "skeleton graph",
    "morphological image processing",
    "medial axis",
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "poly2graph",
    "shapely",
    "jupyterlab",
    "pyvista[all]",
    "minorminer",
    "tabulate",
    "fastrdp",
    "tqdm",
]

[project.optional-dependencies]
all = [
    "plotly",
    "igraph",
]

[project.urls]
Homepage = "https://github.com/sarinstein-yan/Nodal-Knot"
Repository = "https://github.com/sarinstein-yan/Nodal-Knot"
PyPI = "https://pypi.org/project/knotted_graph/"

[tool.hatch.version]
path = "src/knotted_graph/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "assets",
  "*.ipynb",
  "**/*.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = ["src/knotted_graph"]